--- a/css/admin.css
+++ b/css/admin.css
@@ -181,3 +181,16 @@ width:250px;
 #fail{
    color:red;
 }
+
+table.one {
+    float:left;
+    width:45%;
+}
+
+table.two   {
+    width:45%;
+    float:right;
+    position: absolute;
+    right: 160px;
+    top: 210px;
+}​
